Fixing up header grid styles Mainly need to fix spacing and add round border to img

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -9,23 +9,12 @@ body {
 div {
     &.main-container{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 250px 1fr 1fr;
         grid-template-areas: 
         "sidebar header header"
         "sidebar main main";
     }
-    &.searchbar{
-        display: grid;
-        grid-template-columns: 30px 1fr;
-        & > #search{
-            grid-column: 2;
-            
-        }
-        & > img{
-            grid-column-start: 1;
-            grid-row-start: 1;
-        }
-    }
+    
 }
 header {
     &.header{
@@ -35,6 +24,44 @@ header {
         grid-template-columns: repeat(2, 1fr);
         gap: 50px;
         padding-top: 20px;
+    }
+    & > .searchbar{
+        display: grid;
+        position: relative;
+        padding-left: 20px;
+        grid-template-columns: 30px 1fr 30px 1fr;
+        grid-column: span 2;
+        & > #search{
+            grid-column: 2;
+            height: 25px;
+            width: 500px;
+            border-radius: 20px;
+            border: 1px solid #808080;
+            outline: none;
+            text-indent: 10px;
+            transition: .2s;
+            &:hover{
+                background-color: #D3D3D3;
+                transition: .2s;
+            }
+        }
+        
+        & > img{
+            grid-column-start: 1;
+            grid-row-start: 1;
+        }
+    }
+    & .searchbar > .user-profile-drop {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-start: 4;
+        & > .user-name{
+            display: flex;
+            justify-items: center;
+            align-items: center;
+            grid-column-start: 2;
+            grid-row-start: 1;
+        }
     }
 }
 nav {
